[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = { version = "1.0", features = [
    "serde",
] } # Ensure this is the latest version available
rand = "0.7"
ring = "0.16.20"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
