[package]
name = "cryptocore"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1", features = ["v4"] }
rand = "0.7"
ed25519-dalek = { version = "1.0", features = ["serde"] }
sha3 = "0.9"
ring = "0.16.20"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
chrono = "0.4"
